--- a/app/styles/note-taking.css
+++ b/app/styles/note-taking.css
@@ -70,14 +70,19 @@ textarea {
 }
 
 button {
-  background-color:#2628c5;
+  background-color:#0e1230;
+  border: 1px solid #4154d6;
+  border-radius: .1rem;
+  color: #d5d5fe;
   padding: 0.5rem;
   margin: 0.3rem;
   width: 10rem;
 }
+
 .controller{
   margin: 1rem;
 }
+
 .textareaWrapper {
   background-color: #f0f0ff;
   border: 2px solid #4a36de;
